[tool.poetry]
name = "autonomous-financial-advisor"
version = "0.1.0"
description = "An agentic AI-powered financial advisor for personal finance management."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
tensorflow = "^2.14.0" # Or use pytorch instead
transformers = "^4.30.0"
nltk = "^3.8.0"
spacy = "^3.6.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
yfinance = "^0.2.30"
numpy-financial = "^1.0.0"
schedule = "^1.2.0"
loguru = "^0.7.0"
sqlalchemy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
